# MELFA-Assista-ROS2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  melfa_hardware.xml  package.xml
bringup/launch/: melfa_controller.launch.py
description/config/: melfa_controller.yaml
description/meshes/: Link_2_1.stl  Link_3_1.stl  Link_4_1.stl  Link_5_1.stl  Link_6_1.stl
description/ros2_control/: melfa.ros2_control.xacro
description/urdf/: RV-5AS.gazebo  RV-5AS.urdf.xacro  materials.xacro
include/melfa_assita_ros2_hw/: melfa_hardware_interface.hpp  visibility_control.h
melfa-assista-hardware/: CMakeLists.txt  melfa_hardware.xml  package.xml
melfa-assista-hardware/bringup/launch/: melfa_controller.launch.py
melfa-assista-hardware/description/config/: melfa_controller.yaml
melfa-assista-hardware/description/ros2_control/: melfa.ros2_control.xacro
melfa-assista-hardware/description/urdf/: RV-5AS.urdf.xacro
melfa-assista-hardware/include/melfa-assista-hardware/: melfa_hardware_interface.hpp  strdef.hpp
melfa-assista-hardware/include/melfa_assita_ros2_hw/: melfa_hardware_interface.hpp
melfa-assista-hardware/src/: melfa_hardware_interface.cpp
melfa-assista-moveit/: .setup_assistant  CMakeLists.txt  package.xml
melfa-assista-moveit/config/: Assista.ros2_control.xacro  Assista.srdf  Assista.urdf.xacro  joint_limits.yaml  kinematics.yaml
melfa-assista-moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
melfa_assista_hardware/: CMakeLists.txt  melfa_assista_hardware.xml  package.xml
melfa_assista_hardware/bringup/config/: melfa_controller.yaml
melfa_assista_hardware/bringup/launch/: launch_mock_robot.launch.py  launch_sim.launch.py  melfa_controller.launch.py  rsp.launch.py
melfa_assista_hardware/controllers/: gpio_controller.cpp
melfa_assista_hardware/controllers/include/melfa_assista_hardware/: gpio_controller.hpp
melfa_assista_hardware/description/config/: melfa_controller.yaml
melfa_assista_hardware/description/meshes/: Link_1_1.stl  base_coact_link.STL  base_link.stl  camera_adapter_link.STL  camera_adapter_link.stl  camera_link.STL  camera_link.stl  coact_base_link.stl  coat_base_link.STL  coat_finger_0_link.STL  coat_finger_1_link.STL  coat_housing_link.STL  epg_link.STL  finger_1_link.STL  finger_2_link.STL  finger_left_link.STL  finger_left_link.stl  finger_right_joint.stl  finger_right_link.STL  fingerbasis_1_link.STL  fingerbasis_2_link.STL  flansch_link.STL  gehaeuse_link.STL  greifer_0_link.STL  greifer_1_link.STL  hand_left_link.STL  hand_left_link.stl  hand_right_link.stl  housing_link.STL  housing_link.stl
melfa_assista_hardware/description/ros2_control/: melfa.ros2_control.xacro
melfa_assista_hardware/description/urdf/: Camera.xacro  Co-Act.xacro  Coact_Schunk.xacro  Coact_w_Camera.xacro  RV-5AS.urdf.xacro  assista_robot.xacro  camera.xacro  materials.xacro  robot.urdf.xacro  ros2_control.xacro  tool.xacro
melfa_assista_hardware/include/melfa_assista_hardware/: GPIOGripperActionClient.hpp  melfa_assista_hardware_interface.hpp  visibility_control.h
melfa_assista_hardware/src/: GPIOGripperActionClient.cpp  melfa_assista_hardware_interface.cpp
melfa_assista_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_assista_moveit_config/config/: Assista.srdf  Assista.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml  servo_config.yaml
melfa_assista_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/: melfa_hardware_interface.cpp
